tests/NormalTests/paczka1/fuzzy1/59759534.err
Error in line 1: wY9TgR S334 11,0
Error in line 3: wY9TgR S225 250,2
Error in line 5: IfZ S334 71,0
Error in line 15: aFsAx0BcWg5 S225 -4,9
Error in line 7: wY9TgR S334 26,0
Error in line 19: IfZ S225 60,35
Error in line 11: aFsAx0BcWg5 S225 51,0
Error in line 9: IfZ S682 4,7
Error in line 17: wY9TgR S682 17,7
Error in line 6: ixXMQ S682 0,5
Error in line 37: Q5EUNQl S682 0,7
Error in line 38: IfZ S225 17,2
